--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <section class="conteudo">
         <div class="conteudo-titulo">
             <img src="unlock.svg" alt="cadeado fechado">
-            <h2 class="titulo-principal">Gerador de senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+            <h2 class="titulo-principal">Gerador de senhas </h2>
+            <h3 class="titulo-secundario">Gere instantaneamente uma senha suspeita e aleatória talvez segura</h3>
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
